# vk-bot

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
examples/: basic.rs  keyboard.rs
src/: bot.rs  context.rs  core.rs  keyboard.rs  lib.rs  request.rs  response.rs
