[package]
name = "vk-bot"
version = "0.1.3" # README.md, CHANGELOG.md
authors = ["Artem Varaksa <aymfst@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Crate for creating chat bots for VK (VKontakte) communities easily."
readme = "README.md"
repository = "https://github.com/u32i64/vk-bot"
keywords = ["vk", "chat", "bot", "callback", "api"]
categories = ["api-bindings"]

[dependencies]
rocket = "0.4.0"
rocket_contrib = "0.4.0"
serde = "1.0.84"
serde_json = "1.0.38"
serde_derive = "1.0.84"
log = "0.4"
rvk = "0.10.0"
regex = "1.1.0"
rand = "0.6.5"
