[package]
name = "vk-bot"
version = "3.0.0" # README.md, CHANGELOG.md
authors = ["Artem Varaksa <aymfst@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Build chat bots for VK (VKontakte) communities easily."
readme = "README.md"
repository = "https://github.com/u32i64/vk-bot"
keywords = ["vk", "chat", "bot", "callback", "api"]
categories = ["api-bindings"]

[dependencies]
rocket = "0.4"
rocket_contrib = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
rvk = "0.15"
regex = "1.1"
rand = "0.7"
